@@ -49,6 +49,11 @@ the filemanager.  Patched to skip listing dot-files;  you can
 still type the full name in.  May be worth restricting to only
 !Platform.Windows.
 
+14. Loading fails if 'Train/' and 'Railway/' do not share a common parent
+directory at some point.  # Disabled the check for 'Train/' as it is
+not actually used later (loading works fine when a Train/ and Railway/
+are in separate locations.
+
 Remaining:
 ----------
 5. Non-existant audio; sound should work the first time, but after
@@ -74,9 +79,6 @@ from being the incorrect case).
 
 13. Pressing "Show issues" during a route with loads of reported issues
 causes 100% CPU.
-
-14. Loading fails if 'Train/' and 'Railway/' do not share a common parent
-directory at some point.
 
 16. After selecting an exterior camera view and then switching back to
 the interior camera; the cab/panel overlay appears in a different position.
