@@ -5,7 +5,8 @@ openbve (0.9.5.5-0ubuntu2) unreleased; urgency=low
   * Only whinge about plugins not being available if 'ats.cfg' exists
   * Don't display hidden .files and .folders in ListViews
   * Update manpage with initial tab options
-
+  * Disable spurious Train folder warning message, as existance is not required later
+	
  -- Paul Sladen <ubuntu@paul.sladen.org>  Thu, 19 Feb 2009 18:49:21 +0000
 
 openbve (0.9.5.5-0ubuntu1) jaunty; urgency=low
